# AdventOfCode

./: .gitignore  day1_1.py  day1_2.py  day2.py  day5.py  day6.py  puzzle_1.py  puzzle_2.py
2019/: .gitignore
2019/day01/: day1_2.py
2019/day02/: day2.py  input.txt
2019/day07/: day7.py
2019/day11/: IntComputer.py  day11.py
2019/day13/: day13.py
2019/day16/: day16.py  dead_end.py
2019/day17/: day17.py
2019/fsharp/: AdventOfCode.fsproj  AssemblyInfo.fs  Program.fs
2019/fsharp/day1/: day1.fs
2019/fsharp/day8/: day8.fs
2020/: Cargo.toml  notes.md
2020/input/2020/: day16_example2.txt  day20_example2.txt  day22.txt  day4_example.txt
2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day13_scratchpad.py  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2020/tests/: day1.rs  day6.rs
2021/: Cargo.toml
2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2022/: Cargo.toml
2022/input/2022/: day19_example.txt
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs  template.rs  utils.rs
2023/: Cargo.toml
2023/input/2023/: day13_example2.txt  day17_example2.txt  day17_example3.txt
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day20.rs  day21.rs  lib.rs  main.rs  template.rs  utils.rs
2024/: .gitignore  .rustfmt.toml  Cargo.toml
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  template.rs  utils.rs
2025/: Cargo.toml
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  main.rs  template.rs  utils.rs
day09/: day9.py
day1/fsharp/day1/: AssemblyInfo.fs  day1.fsproj  main.fs
day10/: day10.py
day11/: IntComputer.py  day11.py
day12/: day12.py
day13/: IntComputer.py  day13.py
day14/: day14.py
day15/: IntComputer.py  day15.py
day17/: day17.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
day8/: day8.py
day9/: day9.py
fsharp/: AdventOfCode.sln  General.fs
fsharp/day1/: day1.fsproj  day1.sln
fsharp/day2/: day2.fs
