[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
#aoc-runner = "0.3"
#aoc-runner-derive = "0.3"
bitvec = "0.22"
enum-primitive-derive = "0.2"
itertools = "0.10"
humantime = "2.0"
#petgraph = "0.6"
#fnv = "1.0"
regex = "1"
strum = "0.23"
strum_macros = "0.23"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rstats = "1.0"
##cached = "0.22"
#numeric-array = "0.5"
lazy_static = "1.4"
#rayon = "1.5"
#colored = "2.0"
ndarray = "0.15"

[[bin]]
name = "aoc"
path = "src/day19.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
