[package]
name = "adventofcode-2022"
version = "1.0.0"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
regex = "1.6"
itertools = "0.10"
humantime = "2.1"
once_cell = "1.16"
ndarray = "0.15"
nom = "7.1"
num = "0.4"
rayon = "1.6.0"
petgraph = "0.6"
#strum = "0.24"
#strum_macros = "0.24"

[[bin]]
name = "aoc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
