[package]
name = "adventofcode-2023"
version = "1.0.0"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
regex = "1.10.2"
itertools = "0.12.0"
humantime = "2.1"
once_cell = "1.18"
ndarray = "0.15.6"
nom = "7.1.3"
num = "0.4.1"
rayon = "1.8.0"
petgraph = "0.6.4"
tinyvec = "1.6.0"
#strum = "0.25.0"
#strum_macros = "0.25.3"

[[bin]]
name = "aoc"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
