[package]
name = "advent-of-code-2023"
version = "1.0.0"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
humantime = "2.1"
regex = "1.10.2"
nom = "7.1.3"
itertools = "0.12.0"
once_cell = "1.19"
lazy_static = "1.4.0"
rayon = "1.8.0"
ndarray = "0.15.6"
num = "0.4.1"

# petgraph = "0.6.4"
tinyvec = "1.6.0"
strum = "0.25.0"
strum_macros = "0.25.3"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
glam = "0.25.0"
dyn-clone = "1.0.16"

[[bin]]
name = "aoc"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
