[package]
name = "advent-of-code-2024"
version = "1.0.0"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
enumflags2 = "0.7.10"
glam = "0.29.0"
itertools = "0.13.0"
ndarray = "0.16.1"
rayon = "1.8.0"
regex = "1.10.2"
#bitflags = "2.6.0"
#dyn-clone = "1.0.16"
#humantime = "2.1"
#nalgebra = "0.33.2"
#nom = "7.1.3"
#num = "0.4.1"
#ouroboros = "0.18.1"
#petgraph = "0.6.4"
#strum = "0.26.3"
#strum_macros = "0.26.4"
tinyvec = { version = "1.6.0", features = ["alloc", "std", "tinyvec_macros"] }

[[bin]]
name = "aoc"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = true
